@@ -1,4 +1,5 @@
 5.2.1 -> 5.2.2:
+    - jbj: solve: flip --aid "opt-in" behavior to --noaid "opt-out".
     - jbj: sqlite: fix: avoid assert failure w %trigger* SECONDARY-SEQUENTIAL
         retrieval using only secondary keys for performance.
     - jbj: fix: save chroot value across embedded scriptlet execution.
